<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:background="@drawable/mlogin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/mlogo2"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:elevation="12dp" />

            <TextView
                android:text="Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:id="@+id/textView4"
                android:layout_marginTop="10dp" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_signin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_signin"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password?"
            android:paddingBottom="10dp" />

        <Button
            android:onClick="signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="SIGNUP"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>
    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>